# dbt-docs-dml

./: README.md  pyproject.toml  test.yml
src/: setup.py
src/dbterd/: core.py  terminal.py
