[tool.poetry]
name = "dbt-docs-dml"
version = "0.1.0"
description = ""
authors = ["Cecil <cecil.ash@karbonhq.com>"]
readme = "README.md"
packages = [{include = "dbt_docs_dml"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
